# blather

./: .travis.yml  README.md  README.rst  makefile  setup.cfg  setup.py
blather/: __init__.py  blather.py  test_blather.py
