[metadata]
name = blather
author = Dan Carroll
author_email = dcarroll314@gmail.com
url = https://github.com/bigthonk/blather
description = Train and use generative language models with only three lines of code.
long_description = file:README.rst
keywords = GPT3, natural language, huggingface, pytorch
license = Apache 2.0
classifiers = 
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
